# neo4j-fraud-detection-agent

./: README.md  app.py  config.py  main.py  pyproject.toml  sample.env
agents/: neo4j_fraud_detector.py  neo4j_fraud_detector_agent.py  neo4j_generic_agent.py  neo4j_intelligence_agent.py  summarizer.py  supervisor.py
config/: config.py
core/: state.py  workflow.py
prompts/: fraud_llm_agent.prompt  generic_llm_agent.prompt  prompt.py  supervisor_router.prompt
tests/: agent.py  llm_model.py  mcp_tools.py  neo4j_connectivity.py  test.ipynb  test.py
tools/: mcp_tools.py
utils/: message_utils.py
